[package]
name = "markmv"
version = "0.1.0"
edition = "2021"
description = "Move markdown files while automatically rewriting all affected links"
license = "MIT"
repository = "https://github.com/elkofy/rs-markmv"
readme = "README.md"
keywords = ["markdown", "links", "cli", "move", "rewrite"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "markmv"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.12"
walkdir = "2"
anyhow = "1"
